--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^4.9.0",
+    "@types/d3-sankey": "^0.4.0",
     "awesome-typescript-loader": "^3.1.3",
     "jest": "^20.0.4",
     "source-map-loader": "^0.2.1",
     "ts-jest": "^20.0.4",
     "typescript": "^2.3.3",
     "webpack": "^2.6.1"
+  },
+  "dependencies": {
+    "d3-sankey": "^0.5.0"
   }
 }
