--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack": "^2.6.1"
   },
   "dependencies": {
-    "csv-loader": "^2.1.1",
-    "d3-sankey": "^0.5.0"
+    "d3-sankey": "^0.5.0",
+    "papaparse": "^4.3.2"
   }
 }
