--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@types/d3": "^4.9.0",
     "@types/d3-sankey": "^0.4.0",
+    "@types/webpack": "^2.2.15",
     "awesome-typescript-loader": "^3.1.3",
+    "csv-loader": "^2.1.1",
     "jest": "^20.0.4",
     "source-map-loader": "^0.2.1",
     "ts-jest": "^20.0.4",
@@ -31,7 +33,6 @@
     "webpack": "^2.6.1"
   },
   "dependencies": {
-    "d3-sankey": "^0.5.0",
-    "papaparse": "^4.3.2"
+    "d3-sankey": "^0.5.0"
   }
 }
